src/css/Comments.css
#comments {
    padding-top:30px;
    padding-bottom:30px;
}

#commentHeader {
    margin:0 0 10px 0;
    color:white;
    font-weight:normal;
}

.commentCard {
    display:flex;
    flex-direction: column;
    justify-content: space-between;
    background-color:rgb(255, 250, 242);
    font-size: 10pt;
    border:3px solid rgb(134, 111, 111);
    margin:5px;
    width:480px;
    max-width: 90vw;
}

.commentCardBody {
    margin:20px 20px;
}

.commentCardFooter {
    background-color:rgba(0,0,0,0.1);
    display:flex;
    align-items: center;
    justify-content: space-evenly;
    border:2px solid rgb(94, 94, 117);
    margin:5px;
    flex-wrap: wrap;
}

.commentCardLabel {
    font-weight:bold;
}

.commentButton {
    width:470px;
    margin:5px;
    height:40px;
    border-radius: 20px;
    border:2px solid grey;
    max-width:90vw;
}

#addCommentForm {
    display:flex;
    flex-direction: column;
    background-color:rgb(255, 250, 242);
    font-size: 10pt;
    border:3px solid rgb(134, 111, 111);
    margin:5px;
    width:480px;
}

#newCommentTextArea {
    font-size: 10pt;
    height:200px;
    margin:5px;  
    border:2px solid grey;
}

#submitNewCommentButton {
    margin:5px;
    height:40px;
    border-radius: 20px;
    border:2px solid grey;
}

#submitNewCommentButton:hover {
    background-color:rgb(12, 204, 12);
    border:2px solid green;
}

.deleteComment {
    display:flex;
    align-items:center;
    flex-direction: column;
}

.deleteComment > p {
    margin:4px;
    font-weight: bold;
}

.deleteComment > button{
    font-size:10pt;
    width:30px;
    height:30px;
    margin:1px 10px 4px 10px;
    border-radius: 20px;
    border:2px solid grey;
}

.deleteComment > button:hover{
    background-color: orangered;
    border:2px solid rgb(189, 50, 0);
}

.deleteComment > button:disabled{
    background-color: grey;
    border:2px solid grey;
}

